--- a/miniblog/blog/templates/about.html
+++ b/miniblog/blog/templates/about.html
@@ -4,11 +4,17 @@
 {% block content  %}
 <div class="col-sm-10">
     <h3 class="text-white my-5 ">About Page</h3>
-    <p>… is enough, I’ve decided. I could keep stumbling on,
-         sharing my thoughts about why the flower clock in 
-         Edinburgh’s Princes Street Gardens reminds me of a 
-         sand mandala, or what I think about the recent debates 
-         on the UKABS </p>
+    <p>A blog (a truncation of "weblog")[1] is an informational 
+        website consisting of discrete, often informal diary-style text entries (posts).
+         Posts are typically displayed in reverse chronological order so that the most
+          recent post appears first, at the top of the web page. In the 2000s, blogs were 
+          often the work of a single individual, occasionally of a small group, and often 
+          covered a single subject or topic. In the 2010s, "multi-author blogs" (MABs) emerged, 
+          featuring the writing of multiple authors and sometimes professionally edited. MABs from newspapers,
+           other media outlets, universities, think tanks, advocacy groups, and similar institutions account for 
+           an increasing quantity of blog traffic. The rise of Twitter and other "microblogging" systems helps
+            integrate MABs and single-author blogs into the news media. Blog can also be used as a verb, meaning 
+            to maintain or add content to a blog. </p>
 
 </div>
 {% endblock content  %} 
