--- a/miniblog/blog/templates/home.html
+++ b/miniblog/blog/templates/home.html
@@ -4,29 +4,13 @@
 {% block content  %}
 <div class="col-sm-10">
     <h3 class="text-white my-5 ">Home Page</h3>
-    <div class="jumbotron jumbotron-fluid jumbo-color">
-        <div class="container">
-          <h1 class="display-4 ">This is Blog Title</h1>
-          <p class="lead">Last week I made my Radio 4 debut on an episode of 
-            In Our Time that explored the emperor Ashoka, who unified much of 
-            the Indian subcontinent in the 3rd century BCE and left behind inscriptions 
-            detailing, amongst other things, his commitment to Buddhism. These inscriptions,
-             fascinating in their own right, are supplemented by Buddhist hagiographies of Ashoka 
-             (which show little awareness of the Ashoka of the edicts but give us an interesting 
-             insight into later generations’ understanding of his character), and are made more
-              intriguing still by what we might call the reception history of Ashoka: remembered as 
-              a great Buddhist king in Buddhist countries, but largely forgotten in India itself until 
-              the 19th century, when his inscriptions were finally deciphered by James Prinsep, a British
-               employee of the Calcutta Mint and Secretary of the Royal Asiatic Society.
-            A couple of questions remain over our understanding of Ashoka, including the extent to which 
-            his use of the term ‘dhamma’ is meant to be understood as specifically Buddhist. His personal 
-            commitment to Buddhism is clear from a number of inscriptions, yet it is not necessarily the case 
-            that every time he mentions dhamma he means it in a Buddhist sense (as referring to Buddhist Truth,
-             the teachings of the Buddha). Another question that one often encounters (and we did so during In
-              Our Time) is whether or not Ashoka was really sincere in his commitment to Buddhist ethics, and this
-               is a question we will never really be able to answer, since the inscriptions are self-presentations,
-                an early form of PR.</p>
-        </div>
-    </div>
+    {% for post in posts %}
+      <div class="jumbotron jumbotron-fluid jumbo-color">
+          <div class="container">
+            <h1 class="display-4 ">{{post.title}}</h1>
+            <p class="lead">{{post.desc}}</p>
+          </div>
+      </div>
+    {% endfor %}
 </div>
 {% endblock content  %} 
